# awp_tf_tests

./: pyproject.toml  setup.py
awp_tf_tests/actions/: attacks.py  callbacks.py  datasets.py  datasets_v2.py  models.py
awp_tf_tests/datasets/v1/: cifar_10.py  mnist.py
awp_tf_tests/datasets/v2/: cifar_10.py  imagenette.py
awp_tf_tests/models/: others.py  preact_resnet_18_v2.py  wideresnet_28.py
awp_tf_tests/models/implementations/: preact_resnet_18.py  wide_resnet_28.py
awp_tf_tests/visualisation/: draw_attacks_v1.py  draw_attacks_v2.py
executable_specs/: testing_resnet_18_v2.ipynb  testing_wide_resnet_28.ipynb  training_resnet_18_v2.ipynb  training_wide_resnet_28.ipynb
models/: others.py
models/implementations/: preact_resnet_18_v2.py  wide_resnet_28.py
